fixed problem with wrong displaying shopping cart on mobile devices

--- a/src/styles/components/ShopingCartListItem/_ShopingCartListItem.scss
+++ b/src/styles/components/ShopingCartListItem/_ShopingCartListItem.scss
@@ -61,10 +61,11 @@
 }
 
 .counter {
-  width: 38%;
+  width: 40%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 
   &__btn {
     font-size: $default-font-size;
