--- a/src/styles/containers/Shop/ShopingCart/_ShopingCart.scss
+++ b/src/styles/containers/Shop/ShopingCart/_ShopingCart.scss
@@ -1,5 +1,5 @@
 .shoping-cart {
-  width: 40rem;
+  width: 85vw;
   min-height: 100vh;
   position: fixed;
   top: 0;
@@ -9,6 +9,27 @@
   transition: all .4s;
   z-index: 500;
   background-color: $color-grey-light-2;
+
+  @include respond(phone) {
+    width: 60vw;
+  }
+
+  @include respond(tab-port) {
+    width: 40vw;
+  }
+
+  @include respond(tab-land) {
+    width: 32vw;
+  }
+
+  @include respond(desktop) {
+    width: 28vw;
+  }
+
+  @include respond(big-desktop) {
+    width: 23vw;
+  }
+
 
   &.open {
     transform: translateX(0);
@@ -29,7 +50,7 @@
 
   &__list {
     padding: 2rem;
-    max-height: 60vh;
+    max-height: 55vh;
     overflow: auto;
 
     @include respond(phone-land) {
